==> DigiMaxIO/IQS7211A/src/IQS7211A.cpp <==
#include "IQS7211A.h"
#include "IQS7211A_INIT_TOUCHPAD4.h"

void IQS7211A::acknowledgeReset(bool stopOrRestart)
{
	uint8_t transferByte[2];	// A temporary array to hold the bytes to be transferred.
	/* Read the System Flags from the IQS7211A, these must be read first in order 
    not to change any settings. */
	readRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte, RESTART);
	/* Write the Ack Reset bit to bit 1 to clear the Reset Event Flag. */
	transferByte[0] = setBit(transferByte[0], IQS7211A_ACK_RESET_BIT);
	/* Write the new byte to the System Flags address. */
	writeRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte, stopOrRestart);
}

void IQS7211A::SW_Reset(bool stopOrRestart)
{
  uint8_t transferByte[2]; // Array to store the bytes transferred.

  readRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte, RESTART);
  /* Set the SW_RESET_BIT in the SYSTEM_CONTROL register */
  transferByte[1] = setBit(transferByte[1], IQS7211A_SW_RESET_BIT); 
  /* Write the new byte to the required device. */
  writeRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte, stopOrRestart);
}

void IQS7211A::enableGestureEvent(bool stopOrRestart)
{
  uint8_t transferBytes[2]; // The array which will hold the bytes which are transferred.

  // First read the bytes at the memory address so that they can be preserved.
  readRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes, RESTART);
  // Set the IQS7211A_GESTURE_EVENT_BIT in CONFIG_SETTINGS
  transferBytes[1] = setBit(transferBytes[1], IQS7211A_GESTURE_EVENT_BIT);
  // Write the bytes back to the device
  writeRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes, stopOrRestart);
}

void IQS7211A::disableCommsReqEn(bool stopOrRestart)
{
  uint8_t transferBytes[2]; // The array which will hold the bytes which are transferred.

  // First read the bytes at the memory address so that they can be preserved.
  readRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes, RESTART);
  // Clear the TP_EVENT_BIT in CONFIG_SETTINGS
  transferBytes[0] = clearBit(transferBytes[0], IQS7211A_TP_EVENT_BIT);
  // Write the bytes back to the device
  writeRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes, stopOrRestart);
}

void IQS7211A::readRandomBytes(uint8_t memoryAddress, uint8_t numBytes, uint8_t bytesArray[], bool stopOrRestart)
{
  // A simple counter to assist with loading bytes into the user-supplied array.
  uint8_t i = 0;  
  
  // Select the device with the address of "_deviceAddress" and start communication.
  Wire.beginTransmission(_deviceAddress);
  // Send a bit asking for the "memoryAddress" register.
  Wire.write(memoryAddress);
  // Complete the selection and communication initialization.
  Wire.endTransmission(RESTART);  // Restart transmission for reading that follows.
  /* The required device has now been selected and it has been told which register 
  to send information from. */

  // Request "numBytes" bytes from the device which has the address "_deviceAddress"
  do
  {
    Wire.requestFrom((int)_deviceAddress, (int)numBytes, (int)stopOrRestart);
  }while(Wire.available() == 0); // Wait for response, this sometimes takes a few attempts

  // Load the received bytes into the array until there are no more 
  while(Wire.available())
  {
    // Load the received bytes into the user-supplied array
    bytesArray[i] = Wire.read();
    i++;
  }

  /* Always manually close the RDY window after a STOP is sent to prevent 
    writing while the RDY window closes */
  if(stopOrRestart == STOP)
  {
    iqs7211a_deviceRDY = false;
  }
}

void IQS7211A::writeRandomBytes(uint8_t memoryAddress, uint8_t numBytes, uint8_t bytesArray[], bool stopOrRestart)
{
  /* Select the device with the address: "_deviceAddress" and start communication. */
  Wire.beginTransmission(_deviceAddress);
  /* Specify the memory address where the IQS7211A must start saving the data, 
    as designated by the "memoryAddress" variable. */
  Wire.write(memoryAddress);
  /* Write the bytes as specified in the array to which "arrayAddress" pointer points. */
  for (int i = 0; i < numBytes; i++)
  {
    Wire.write(bytesArray[i]);
  }
  /* End the transmission, user decides to STOP or RESTART. */
  Wire.endTransmission(stopOrRestart);

  /* Always manually close the RDY window after a STOP is sent to prevent writing 
     while ready closes */
  if(stopOrRestart == STOP)
  {
    iqs7211a_deviceRDY = false;
  }
}
