==> Ruan-Potgieter/EDesign-Multifunctional-Light-SOurce/Core/Src/IQS7211A.c <==
#include "IQS7211A.h"
#include "IQS7211A_init_AZP1189A3_v0.1.h"
#include <string.h>
#include <stdio.h>
#include "stm32f3xx_hal.h"
#define IQS_ADR   0x56
#define MCLR_Pin GPIO_PIN_2
#define MCLR_GPIO_Port GPIOB
#define RDY_Pin GPIO_PIN_15
#define RDY_GPIO_Port GPIOB

void SW_Reset()
{
  uint8_t transferByte[2]; // Array to store the bytes transferred.
  	  	  	  	  	  	   // Use an array to be consistent with other methods in this class.
  while(!waitForReady(RDY_Pin, RDY_GPIO_Port));
  readRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte);
  // Mask the settings with the SW_RESET_BIT.
  transferByte[1] |= 0x02;  // This is the bit required to perform SW Reset.
  // Write the new byte to the required device.
  while(!waitForReady(RDY_Pin, RDY_GPIO_Port));
  writeRandomBytes(IQS7211A_MM_SYSTEM_CONTROL, 2, transferByte);
}

void writeRandomBytes(uint8_t memoryAddress, uint8_t numBytes, uint8_t bytesArray[]){

	uint16_t DATA[2];
	DATA[0] = memoryAddress;
	while(RDY_LOW==0){
		continue;
	}
	HAL_I2C_Mem_Write(&hi2c1, (IQS_ADR<<1),  DATA[0], I2C_MEMADD_SIZE_8BIT, bytesArray, (uint16_t)numBytes,50);
	RDY_LOW=0;

}

void readRandomBytes(uint8_t memoryAddress, uint8_t numBytes, uint8_t bytesArray[]){

	uint16_t DATA[2];
	DATA[0] = memoryAddress;
	while(RDY_LOW==0){
		continue;
	}

	HAL_I2C_Mem_Read(&hi2c1, (IQS_ADR<<1), DATA[0], I2C_MEMADD_SIZE_8BIT, bytesArray, (uint16_t)numBytes, 50);
	RDY_LOW=0;
}

void acknowledgeReset()
{
	uint8_t transferBytes[2];

	while(RDY_LOW==0){
		 continue;
	 }
	 RDY_LOW=0;

	HAL_I2C_Mem_Read(&hi2c1, (0x56<<1), IQS7211A_MM_SYSTEM_CONTROL, I2C_MEMADD_SIZE_8BIT, transferBytes, 2, HAL_MAX_DELAY);

	 while(RDY_LOW==0){
		  continue;
	 }
	 RDY_LOW=0;

	// SWrite the AAck Reset bit to 1 to clear the Show Reset Flag.
	transferBytes[0] |= (1<<7);
	// Write the new byte to the System Flags address.

	HAL_I2C_Mem_Write(&hi2c1, (0x56<<1), IQS7211A_MM_SYSTEM_CONTROL, I2C_MEMADD_SIZE_8BIT, transferBytes, 2, HAL_MAX_DELAY);
}

void ENABLE_GESTURE_EVENT(){
	uint8_t transferBytes[2];

	 while(!waitForReady(RDY_Pin, RDY_GPIO_Port));
	readRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes);

	transferBytes[1] |= 0x02;

	while(!waitForReady(RDY_Pin, RDY_GPIO_Port));
	readRandomBytes(IQS7211A_MM_CONFIG_SETTINGS, 2, transferBytes);
}

void disableCommsReqEn()
{
  uint8_t transferBytes[2]; // The array which will hold the bytes which are transferred.

	 while(RDY_LOW==0){
		 continue;
	 }
	 RDY_LOW=0;

  // First read the bytes at the memory address so that they can be preserved.
  HAL_I2C_Mem_Read(&hi2c1, (0x56<<1), IQS7211A_MM_CONFIG_SETTINGS, 1, transferBytes, 2, HAL_MAX_DELAY);
  // Set the TP_EVENT_BIT in CONFIG_SETTINGS
  transferBytes[0] |= 0x10;
  // Write the bytes back to the device
	 while(RDY_LOW==0){
		 continue;
	 }
	 RDY_LOW=0;
  HAL_I2C_Mem_Write(&hi2c1, (0x56<<1), IQS7211A_MM_CONFIG_SETTINGS, 1, transferBytes, 2, HAL_MAX_DELAY);
}
